# mst

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.sh  rebuild.sh  test.sh
.github/workflows/: CheckLicenses.yml  Coverage.yml  UnitTestOnFeaturePush.yml  UnitTestOnPullRequest.yml  cmake-ubuntu.yml  cmake-windows.yml  cmake.yml
All_Platforms/: CMakeLists.txt  muuid.cpp
Linux/: CMakeLists.txt  mdll_malloc.cpp  mlogger.cpp  mplatform.cpp  mthreading.cpp
Test_All_Platforms/: CMakeLists.txt
Test_All_Platforms/algorithm/: container.cpp  iterate.cpp  iterate_remove.cpp
Test_All_Platforms/common/: common.cpp  compiletime.cpp  flag.cpp  hash.cpp  printf.cpp  uuid.cpp
Test_All_Platforms/containers/: array_view.cpp  arraymap.cpp  colony.cpp  ranges.cpp  sparse_set.cpp
Test_All_Platforms/lock_free/: queue.cpp
Test_All_Platforms/math/: algorithm.cpp  matrix_functionality.cpp  matrix_simd.cpp  vector_simd.cpp
Test_All_Platforms/memory/: aligned_allocator.cpp  aligned_malloc.cpp  memory_view.cpp
Test_All_Platforms/platform/: directory_and_paths.cpp  names_and_versions.cpp
Test_All_Platforms/shared/: random_data_generator.h
Test_All_Platforms/simd/: vector.cpp
Test_All_Platforms/testing/: random_data_generator.cpp
Test_All_Platforms/threading/: slim_event.cpp  slim_recursive_mutex.cpp
Test_Linux/: CMakeLists.txt  dev.cpp
Test_Windows/: CMakeLists.txt  dev.cpp  moodycamel.h
Test_Windows/memory/: com_ptr.cpp
Test_Windows/platform/: memory_configuration.cpp
Windows/: CMakeLists.txt  mdll_malloc.cpp  mlogger.cpp  mplatform.cpp  mthreading.cpp  mthreading_slim.cpp
dependencies/: CMakeLists.txt
mst/: Licenses.txt  malgorithm.h  malgorithm_container.h  maligned_malloc.h  mallocator.h  marray_view.h  marraymap.h  mcolony.h  mcom_ptr.h  mcommon.h  mcompiletime.h  mconcepts.h  mcore.h  mdebug.h  mdll_malloc.h  mdll_safe.h  mdll_string.h  mdll_string_convertible.h  mflag.h  mflag.hpp  mflag_traits.h  mimpl_ptr.h  minstream.h  mlock_free_queue.h  mlogger.h  mmath2.h  mmath_algorithm.h  mmemory_view.h  mnet_httpclient.h  mnone.h  moptional.h  mplatform.h  mranges.h  mscope_guard.h  msimd.h  msimdmath.h  msparse_set.h  mst.natvis  mstack_string.h  mstatic_string.h  (+62 more)
src/: mplatform.cpp  mthreading.cpp  mthreading_rw_lock.cpp  muuid.cpp
src/Windows/: mplatform.cpp  mthreading.cpp  mthreading_rw_lock.cpp
src/linux/: mplatform.cpp  mthreading.cpp  mthreading_rw_lock.cpp  mthreading_slim.cpp
tests/algorithm/: container.cpp  for_each.cpp  for_each_remove_if.cpp
tests/common/: common.cpp  compiletime.cpp  flag.cpp  hash.cpp  printf.cpp  scope_guard.cpp  uuid.cpp
tests/containers/: array_view.cpp  arraymap.cpp  colony.cpp  ranges.cpp  sparse_set.cpp
tests/lock_free/: queue.cpp
tests/math/: algorithm.cpp  helpers.h  matrix_functionality.cpp  matrix_simd.cpp  vector_simd.cpp
tests/memory/: aligned_allocator.cpp  aligned_malloc.cpp  com_ptr.cpp  memory_view.cpp
tests/platform/: directory_and_paths.cpp  memory.cpp  names_and_versions.cpp  processor.cpp
tests/test_util/: helpers.cpp  helpers.h  random_data_generator.cpp  random_data_generator.h  set_assertions.cpp  set_assertions.h
tests/text/: static_string.cpp
tests/threading/: slim_event.cpp  slim_recursive_mutex.cpp
utils/generate_headers/: main.cpp
utils/update_licenses/: main.cpp
